add deployment endpoint
